--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
       <div class="col-11 col-md-8 offset-md-2 d-lg-none" id="greenline4"></div>
 
     <ul class="col-md-10 col-lg-6 list-unstyled">
-      <li>"Pelvic floor physical therapy changed my life. I am not exaggerating. I thought my pain and muscular dysfunction was in my head, and something that I would just have to deal with for the rest of my life… until I was referred to Dr. Kerry Winge by my doctor. She was prompt in calling me to set up an appointment and I have been better ever since! I even noticed results after the first session. From there, my condition only improved. It even surpassed my expectations. I just didn’t have pain; now, I actually feel “good!” At first, I was scared and skeptical. I didn’t know this type of therapy existed-- or that I needed it. You are in good hands with Dr. Winge! After every session with her, I felt both mentally and physically relaxed. She has a very calming, reassuring presence. She is the best person for this type of therapy!"</li>
+      <li>"Pelvic floor physical therapy changed my life. I am not exaggerating. I thought my pain and muscular dysfunction was in my head, and something that I would just have to deal with for the rest of my life… until I was referred to Dr. Kerry Winge by my doctor. She was prompt in calling me to set up an appointment and I have been better ever since! I even noticed results after the first session. From there, my condition only improved. It even surpassed my expectations. I just didn’t have pain; now, I actually feel “good!” At first, I was scared and skeptical. I didn’t know this type of therapy existed<span>&mdash<span>or that I needed it. You are in good hands with Dr. Winge! After every session with her, I felt both mentally and physically relaxed. She has a very calming, reassuring presence. She is the best person for this type of therapy!"</li>
       <li><br></li>
       <li>Mary F.</li>
     </ul>
@@ -92,10 +92,15 @@
 </article>
 
 
-<footer>
+<footer class="col-12">
   <img class="col-3 col-md-2 col-lg-1 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
-  <a href="contact.html">CONTACT US</a>
-  <p>Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>
+  <a href="contact.html">Contact us</a>
+  <p class="">Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>
+    <ul class="list-unstyled float-lg-right" id="address">
+      <li><h3>Located at:</h3></li>
+      <li>300 Wedgewood Dr. STE 132</li>
+      <li>Morgantown, WV 26505</li>
+    </ul>
 </footer>
 
   </div><!--closes row-->
