--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
   <section class="col-12 col-lg-6" id="physical">
     <div class="col-11" id="greenline1"></div>
-      <h3>Dr. Kerry Winge, PT, DPT, is a physical therapist serving the surrounding areas of Morgantown. She is a board certified Women's Clinical Specialist who has treated thousands of patients over 25 years. Her expertise at treating complex musculoskeletal and global chronic pain conditions, inlcuding sexual dysfunction disorders is unsurpassed.</h3>
+      <h3>Dr. Kerry Winge, PT, DPT, is a physical therapist serving the surrounding areas of Morgantown. She is a board certified Women's Clinical Specialist who has treated thousands of patients over 25 years. Her expertise in treating complex musculoskeletal and global chronic pain conditions, including sexual dysfunction disorders is unsurpassed.</h3>
     <div class="col-11" id="greenline2"></div>
   </section>
 
@@ -85,11 +85,17 @@
     </ul>
   </div>
 
-<footer class="col-12">
-  <img class="col-3 col-md-2 col-lg-1 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
-  <a href="contact.html">CONTACT US</a>
-  <p class="">Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>
-</footer>
+  <footer class="col-12">
+    <img class="col-3 col-md-2 col-lg-1 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
+    <a href="contact.html">Contact us</a>
+    <p class="">Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>
+      <ul class="list-unstyled float-lg-right" id="address">
+        <li><h3>Located at:</h3></li>
+        <li>300 Wedgewood Dr. STE 132</li>
+        <li>Morgantown, WV 26505</li>
+      </ul>
+  </footer>
+
 
 
 
