--- a/resources.html
+++ b/resources.html
@@ -133,7 +133,7 @@
   </div>
 
 <div class="col-12">
-  <h2 id="fecal">Fecal incontinence</h2>
+  <h2 id="fecal">Fecal Incontinence</h2>
   <div class="col-12 pinkline"></div>
   <div class="card mb-3">
     <div class="card-body">
@@ -261,10 +261,15 @@
 
 
 
-<footer>
+<footer class="col-12">
   <img class="col-3 col-md-2 col-lg-1 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
-  <a href="contact.html">CONTACT US</a>
-  <p>Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>
+  <a href="contact.html">Contact us</a>
+  <p class="">Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>
+    <ul class="list-unstyled float-lg-right" id="address">
+      <li><h3>Located at:</h3></li>
+      <li>300 Wedgewood Dr. STE 132</li>
+      <li>Morgantown, WV 26505</li>
+    </ul>
 </footer>
 
   </div><!--closes row-->
