--- a/services.html
+++ b/services.html
@@ -46,7 +46,7 @@
     <ul class="col-md-8 col-lg-4 offset-md-2 offset-lg-0 list-unstyled float-lg-left">
       <li><img class="img-fluid col-5 offset-3 col-md-4 offset-md-4" src="images/listening.png" alt="line drawing of an ear with lines coming out to symbolize listening in a pink circle"></li>
       <li><h3>LISTENING</h3></li>
-      <li>Tell me what is going on and how this problem is affecting your life. On average, patients have been to 3-4 practitioners prior to coming in to see me. I want my clinicto be your last stop.</li>
+      <li>Tell me what is going on and how this problem is affecting your life. On average, patients have been to 3-4 practitioners prior to coming in to see me. I want my clinic to be your last stop.</li>
     </ul>
     <ul class="col-md-8 col-lg-4 offset-md-2 offset-lg-0 list-unstyled float-lg-left">
       <li><img class="img-fluid col-5 offset-3 col-md-4 offset-md-4 offset-xl-3" src="images/evaluation.png" alt="line drawing of a clipboard with a checklist to symbolize evaluation in a pink circle"></li>
@@ -93,8 +93,14 @@
 <footer class="col-12">
   <img class="col-3 col-md-2 col-lg-1 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
   <a href="contact.html">CONTACT US</a>
-  <p>Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>
+  <p class="">Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>
+    <ul class="list-unstyled float-lg-right" id="address">
+      <li><h3>Located at:</h3></li>
+      <li>300 Wedgewood Dr. STE 132</li>
+      <li>Morgantown, WV 26505</li>
+    </ul>
 </footer>
+
 
 
 
