--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <header class="col-12">
   <h3 class="col-11 col-md-9 col-lg-7">"Dr. Winge has helped me regain aspects of my life that I thought were gone. She has helped remind me that healing isn’t linear, and that management is huge part of the process. I am forever grateful to her for giving me hope once again."</h3>
-  <p>Emily D.</p>
+  <!--<p>Emily D.</p>-->
   </header>
 
 
@@ -56,8 +56,10 @@
 
 
 <div class="col-10 col-md-5 col-lg-4" id="request">
-  <a class="" href="contact.html">BOOK AN APPOINTMENT</a>
+  <a target="_blank" href="https://henoportal.com/ords/f?p=783:9999:::NO::P1_PORTAL_ID:1746VTP8K1WI">BOOK AN APPOINTMENT</a>
 </div>
+
+
 
 <article class="col-12" id="well">
   <section>
@@ -69,7 +71,7 @@
   </section>
   </article>
 
-  <section class="col-12 col-lg-6" id="physical">
+  <section class="col-12 col-md-10 offset-md-1 offset-lg-0 col-lg-6" id="physical">
     <div class="col-11" id="greenline1"></div>
       <h3>Dr. Kerry Winge, PT, DPT, is a physical therapist serving the surrounding areas of Morgantown. She is a board certified Women's Clinical Specialist who has treated thousands of patients over 25 years. Her expertise in treating complex musculoskeletal and global chronic pain conditions, including sexual dysfunction disorders is unsurpassed.</h3>
     <div class="col-11" id="greenline2"></div>
@@ -79,9 +81,9 @@
   <div class="col-12 col-lg-6" id="test1">
     <img class="col-10 offset-1 col-md-5 img-fluid offset-lg-0" src="images/linear.png" alt="graphic artwork of Healing isn't linear in green and light pink">
     <ul class=" col-9 col-md-5 col-lg-6 list-unstyled">
-      <li> At first, I was scared and skeptical. I didn’t know this type of therapy existed — or that I needed it. You are in good hands with Dr. Winge!</li>
+      <li>"At first, I was scared and skeptical. I didn’t know this type of therapy existed — or that I needed it. You are in good hands with Dr. Winge!"</li>
       <li><br></li>
-      <li>Mary F.</li>
+      <!--<li>Mary F.</li>-->
     </ul>
   </div>
 
@@ -89,9 +91,10 @@
     <img class="col-3 col-md-2 col-lg-1 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
     <a href="contact.html">Contact us</a>
     <p class="">Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>
+    <h4>Fax: 304.844.9564</h4>
       <ul class="list-unstyled float-lg-right" id="address">
         <li><h3>Located at:</h3></li>
-        <li>300 Wedgewood Dr. STE 132</li>
+        <li>300 Wedgewood Dr. Suite 132</li>
         <li>Morgantown, WV 26505</li>
       </ul>
   </footer>
