--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
     <ul class="col-md-10 col-lg-6 float-lg-left list-unstyled">
       <li>"When I was first referred to Dr. Kerry Winge, I was easily at the lowest point of my life. Countless unsuccessful treatments, surgeries, and traumatizing past physical therapy attempts were all under my belt. I was convinced that no one would be able to help me feel better. When I met Kerry I knew that something would be different just from our first session. She has given me the tools and help that I’ve been longing for since I was diagnosed at 18. Now at 22, I have progressed in ways I never thought I would. Kerry has helped me regain aspects of my life that I thought were gone. She has helped remind me that healing isn’t linear, and that management is huge part of the process. I am forever grateful to her for giving me hope once again." </li>
       <li><br></li>
-      <li>Emily D.</li>
+      <!--<li>Emily D.</li>-->
     </ul>
 
       <div class="col-11 col-md-8 offset-md-2 d-lg-none" id="greenline3"></div>
@@ -76,7 +76,7 @@
     <ul class="col-md-10 col-lg-6 float-lg-right list-unstyled">
       <li>"Before physical therapy with Dr. Kerry Winge I was hopeless: I felt that not having sexual pain would never be an option for me. Once working with Dr. Winge and progressing through therapy, I was able to make great improvements at the office and with at home techniques she suggested. After only five months of treatment, I now have my life back and can live like a normal college student! Dr. Kerry Winge is absolutely the best, at such an uncomfortable time in my life she made me feel normal and not broken. Throughout the journey she was always only a text or phone call away! I am so thankful for this experience and to have her help me overcome it and take back my life!"</li>
       <li><br></li>
-      <li>Kylie P.</li>
+      <!--<li>Kylie P.</li>-->
     </ul>
 
       <div class="col-11 col-md-8 offset-md-2 d-lg-none" id="greenline4"></div>
@@ -84,10 +84,16 @@
     <ul class="col-md-10 col-lg-6 list-unstyled">
       <li>"Pelvic floor physical therapy changed my life. I am not exaggerating. I thought my pain and muscular dysfunction was in my head, and something that I would just have to deal with for the rest of my life… until I was referred to Dr. Kerry Winge by my doctor. She was prompt in calling me to set up an appointment and I have been better ever since! I even noticed results after the first session. From there, my condition only improved. It even surpassed my expectations. I just didn’t have pain; now, I actually feel “good!” At first, I was scared and skeptical. I didn’t know this type of therapy existed &mdash; or that I needed it. You are in good hands with Dr. Winge! After every session with her, I felt both mentally and physically relaxed. She has a very calming, reassuring presence. She is the best person for this type of therapy!"</li>
       <li><br></li>
-      <li>Mary F.</li>
+      <!--<li>Mary F.</li>-->
     </ul>
 
       <div class="col-11 col-md-8 offset-md-2 d-lg-none" id="greenline5"></div>
+
+      <ul class="col-md-10 col-lg-6 list-unstyled float-right" id="four">
+        <li>"I first met Kerry through a referral from my OBGYN. It was during a very vulnerable time.  Kerry immediately made me feel comfortable. She is professional and thorough- she aims to look at the big picture and assist with movements in a practical way for everyday life. I can’t tell you how kind, empathetic, patient and knowledgeable Dr. Winge is. She understood the necessity for advanced learning to offer even more support to her clients. She completed her doctorate while working full time-one of the many testaments to her dedication. Every single patient is important to her.  She was committed to challenging me while also giving me realistic expectations."</li>
+        <li><br></li>
+        <!--<li>Mary F.</li>-->
+      </ul>
 
 </article>
 
@@ -96,9 +102,10 @@
   <img class="col-3 col-md-2 col-lg-1 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
   <a href="contact.html">Contact us</a>
   <p class="">Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>
+  <h4>Fax: 304.844.9564</h4>
     <ul class="list-unstyled float-lg-right" id="address">
       <li><h3>Located at:</h3></li>
-      <li>300 Wedgewood Dr. STE 132</li>
+      <li>300 Wedgewood Dr. Suite 132</li>
       <li>Morgantown, WV 26505</li>
     </ul>
 </footer>
