--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,16 @@
       </div>
     </nav>
 
-<section class="col-12 float-lg-left col-lg-6" id="appt">
-  <h1>REQUEST AN APPOINTMENT</h1>
+    <div class="col-12 col-lg-6 col-xl-7 float-lg-right" id="form">
+      <h1>REQUEST AN APPOINTMENT</h1>
+        <p>Need to come in? Click the button below and you'll be redirected to our Heno Portal. You can use this tool to communicate with us, schedule appoinments, and make payments.</p>
+          <div class="col-11 col-md-6 col-lg-9 col-xl-7" id="appointment">
+            <a target="_blank" href="https://henoportal.com/ords/f?p=783:9999:::NO::P1_PORTAL_ID:1746VTP8K1WI">BOOK AN APPOINTMENT</a>
+          </div>
+    </div>
+
+<section class="col-12 float-lg-left" id="appt">
+
     <p>Physical Therapy can help with the following:</p>
       <ul class="list-unstyled col-md-7 float-md-left">
         <li>Bowel Incontinence</li>
@@ -52,7 +60,7 @@
         <li>Osteoporosis</li>
         <li><br></li>
       </ul>
-      <ul class="list-unstyled col-md-6 col-lg-12 float-md-right" id="secondlist">
+      <ul class="list-unstyled col-md-6  float-md-right" id="secondlist">
         <li>Pelvic Pain</li>
         <li>Urinary Incontinence</li>
         <li>Pregnancy and Post-Partum</li>
@@ -64,26 +72,17 @@
 
 </section>
 
-<div class="col-12 col-lg-6 float-lg-right" id="form">
-  <form action="contact.php" method="post" enctype="plain">
-  <label for="name">Name</label><br>
-  <input type="text" id="name" name="name"><br>
-  <label for="email">Email</label><br>
-  <input type="text" id="email" name="email"><br>
-  <label for="message">Message</label><br>
-  <textarea id="message" name="message"></textarea><br>
-  <input type="submit" id="submit" value="submit">
-</form>
-</div>
+
 
 
 <footer class="col-12">
   <img class="col-3 col-md-2 col-lg-1 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
   <a href="contact.html">Contact us</a>
   <p class="">Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>
+  <h4>Fax: 304.844.9564</h4>
     <ul class="list-unstyled float-lg-right" id="address">
       <li><h3>Located at:</h3></li>
-      <li>300 Wedgewood Dr. STE 132</li>
+      <li>300 Wedgewood Dr. Suite 132</li>
       <li>Morgantown, WV 26505</li>
     </ul>
 </footer>
