--- a/services.html
+++ b/services.html
@@ -92,11 +92,12 @@
 
 <footer class="col-12">
   <img class="col-3 col-md-2 col-lg-1 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
-  <a href="contact.html">CONTACT US</a>
+  <a href="contact.html">Contact us</a>
   <p class="">Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>
+  <h4>Fax: 304.844.9564</h4>
     <ul class="list-unstyled float-lg-right" id="address">
       <li><h3>Located at:</h3></li>
-      <li>300 Wedgewood Dr. STE 132</li>
+      <li>300 Wedgewood Dr. Suite 132</li>
       <li>Morgantown, WV 26505</li>
     </ul>
 </footer>
