--- a/about.html
+++ b/about.html
@@ -103,6 +103,8 @@
   <a href="contact.html">Contact us</a>
   <p class="">Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>
   <h4>Fax: 304.844.9564</h4>
+  <h4>Phone: 304.282.6497</h4>
+
     <ul class="list-unstyled float-lg-right" id="address">
       <li><h3>Located at:</h3></li>
       <li>300 Wedgewood Dr. Suite 132</li>
