--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
   <a target="_blank" href="https://henoportal.com/ords/f?p=783:9999:::NO::P1_PORTAL_ID:1746VTP8K1WI">BOOK AN APPOINTMENT</a>
 </div>
 
+<div class="col-10 col-md-5 col-lg-4" id="pay">
+  <a target="_blank" href="https://henoportal.com/ords/f?p=783:9999:::NO::P1_PORTAL_ID:1746VTP8K1WI">PAY ONLINE HERE</a>
+</div>
+
 
 
 <article class="col-12" id="well">
@@ -92,6 +96,8 @@
     <a href="contact.html">Contact us</a>
     <p class="">Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>
     <h4>Fax: 304.844.9564</h4>
+    <h4>Phone: 304.282.6497</h4>
+
       <ul class="list-unstyled float-lg-right" id="address">
         <li><h3>Located at:</h3></li>
         <li>300 Wedgewood Dr. Suite 132</li>
