--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
 
       <div class="col-11 col-md-8 offset-md-2 d-lg-none" id="greenline4"></div>
 
-    <ul class="col-md-10 col-lg-6 list-unstyled">
+    <ul class="col-md-10 col-lg-6 float-lg-left list-unstyled">
       <li>"Pelvic floor physical therapy changed my life. I am not exaggerating. I thought my pain and muscular dysfunction was in my head, and something that I would just have to deal with for the rest of my life… until I was referred to Dr. Kerry Winge by my doctor. She was prompt in calling me to set up an appointment and I have been better ever since! I even noticed results after the first session. From there, my condition only improved. It even surpassed my expectations. I just didn’t have pain; now, I actually feel “good!” At first, I was scared and skeptical. I didn’t know this type of therapy existed &mdash; or that I needed it. You are in good hands with Dr. Winge! After every session with her, I felt both mentally and physically relaxed. She has a very calming, reassuring presence. She is the best person for this type of therapy!"</li>
       <li><br></li>
       <!--<li>Mary F.</li>-->
@@ -89,10 +89,10 @@
 
       <div class="col-11 col-md-8 offset-md-2 d-lg-none" id="greenline5"></div>
 
-      <ul class="col-md-10 col-lg-6 list-unstyled float-right" id="four">
+      <ul class="col-md-10 col-lg-6 float-lg-right list-unstyled">
         <li>"I first met Kerry through a referral from my OBGYN. It was during a very vulnerable time.  Kerry immediately made me feel comfortable. She is professional and thorough- she aims to look at the big picture and assist with movements in a practical way for everyday life. I can’t tell you how kind, empathetic, patient and knowledgeable Dr. Winge is. She understood the necessity for advanced learning to offer even more support to her clients. She completed her doctorate while working full time-one of the many testaments to her dedication. Every single patient is important to her.  She was committed to challenging me while also giving me realistic expectations."</li>
         <li><br></li>
-        <!--<li>Mary F.</li>-->
+        <!--<li>Kylie P.</li>-->
       </ul>
 
 </article>
@@ -101,9 +101,9 @@
 <footer class="col-12">
   <img class="col-3 col-md-2 col-lg-1 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
   <a href="contact.html">Contact us</a>
-  <p class="">Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>
+  <!--<p class="">Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>-->
   <h4>Fax: 304.844.9564</h4>
-  <h4>Phone: 304.282.6497</h4>
+  <h4>Phone: 304.974.1676</h4>
 
     <ul class="list-unstyled float-lg-right" id="address">
       <li><h3>Located at:</h3></li>
