--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.typekit.net/vie3drk.css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
   </head>
   <body>
 
@@ -40,9 +41,15 @@
     </nav>
 
 <header class="col-12">
-  <h3 class="col-11 col-md-9 col-lg-7">"Dr. Winge has helped me regain aspects of my life that I thought were gone. She has helped remind me that healing isn’t linear, and that management is huge part of the process. I am forever grateful to her for giving me hope once again."</h3>
+  <h3 class="col-11 col-md-12 col-lg-9 col-xl-9">"Dr. Winge has helped me regain aspects of my life that I thought were gone. She has helped remind me that healing isn’t linear, and that management is huge part of the process. I am forever grateful to her for giving me hope once again."</h3>
   <!--<p>Emily D.</p>-->
   </header>
+
+  <div id="new" class="col-12">
+    <h1>Beginning Fall 2022</h1>
+      <h2>New Pelvic Health Classes</h2>
+        <p class="col-xl-9">Individualized training offered to private groups up to 5 participants. Specially designed separate classes for men and women. Call Kay at 304.974.1676 for more information.</p>
+  </div>
 
 
 <section class="col-12 col-lg-8 offset-lg-2" id="hi">
@@ -56,35 +63,32 @@
 
 
 <div class="col-10 col-md-5 col-lg-4" id="request">
-  <a target="_blank" href="https://henoportal.com/ords/f?p=783:9999:::NO::P1_PORTAL_ID:1746VTP8K1WI">BOOK AN APPOINTMENT</a>
+  <a target="_blank" href="https://henoportal.com/ords/f?p=783:9999:::NO::P1_PORTAL_ID:1746VTP8K1WI">PATIENT REGISTRATION</a>
 </div>
 
-<div class="col-10 col-md-5 col-lg-4" id="pay">
-  <a target="_blank" href="https://henoportal.com/ords/f?p=783:9999:::NO::P1_PORTAL_ID:1746VTP8K1WI">PAY ONLINE HERE</a>
-</div>
 
 
 
 <article class="col-12" id="well">
   <section>
     <ul class="col-12 list-unstyled">
-      <li><h2 class="col-10 offset-1 col-md-5 col-lg-4">We are here to help!</h2></li>
-      <li><img class="img-fluid col-9 col-md-6 col-lg-4 offset-lg-2 col-xl-3" src="images/dilator.png" alt="light pink dilator pointing at dried roses positioned in the form of a heart"></li>
-      <li><p class="col-md-5 col-lg-6 col-xl-7">Pelvic Health Physical Therapy of Morgantown is a clinic specializing in the care and treatment of various orthopedic and neurological problems including a wide range of pelvic disorders. Treatments include one on one personal care in a private, comfortable setting. We are compassionate and determined to help you achieve your individual goals to regain health to live life to the fullest!</p></li>
+      <li><h2 class="col-12 offset-1 col-md-5 col-lg-4">Here to help!</h2></li>
+      <li><img class="img-fluid col-9 col-md-6 col-lg-3 offset-lg-2 col-xl-4" src="images/dilator.png" alt="light pink dilator pointing at dried roses positioned in the form of a heart"></li>
+      <li><p class="col-md-6 col-lg-8 col-xl-7">Pelvic Health Physical Therapy of Morgantown is a clinic specializing in the care and treatment of various orthopedic and neurological problems including a wide range of pelvic disorders. Treatments include one on one personal care in a private, comfortable setting. We are compassionate and determined to help you achieve your individual goals to regain health to live life to the fullest!</p></li>
     </ul>
   </section>
   </article>
 
   <section class="col-12 col-md-10 offset-md-1 offset-lg-0 col-lg-6" id="physical">
-    <div class="col-11" id="greenline1"></div>
+    <!--<div class="col-11" id="greenline1"></div>-->
       <h3>Dr. Kerry Winge, PT, DPT, is a physical therapist serving the surrounding areas of Morgantown. She is a board certified Women's Clinical Specialist who has treated thousands of patients over 25 years. Her expertise in treating complex musculoskeletal and global chronic pain conditions, including sexual dysfunction disorders is unsurpassed.</h3>
-    <div class="col-11" id="greenline2"></div>
+    <!--<div class="col-11" id="greenline2"></div>-->
   </section>
 
 
   <div class="col-12 col-lg-6" id="test1">
-    <img class="col-10 offset-1 col-md-5 img-fluid offset-lg-0" src="images/linear.png" alt="graphic artwork of Healing isn't linear in green and light pink">
-    <ul class=" col-9 col-md-5 col-lg-6 list-unstyled">
+    <img class="col-md-5 img-fluid offset-lg-0" src="images/linear.png" alt="graphic artwork of Healing isn't linear in green and light pink">
+    <ul class=" col-9 col-md-6 col-lg-6 list-unstyled">
       <li>"At first, I was scared and skeptical. I didn’t know this type of therapy existed — or that I needed it. You are in good hands with Dr. Winge!"</li>
       <li><br></li>
       <!--<li>Mary F.</li>-->
@@ -94,9 +98,12 @@
   <footer class="col-12">
     <img class="col-3 col-md-2 col-lg-1 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
     <a href="contact.html">Contact us</a>
-    <p class="">Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>
-    <h4>Fax: 304.844.9564</h4>
-    <h4>Phone: 304.282.6497</h4>
+    <!--<p class="">Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>-->
+
+    <div id="numbers">
+      <h4>Fax: 304.844.9564</h4>
+      <h4>Phone: 304.974.1676</h4>
+    </div>
 
       <ul class="list-unstyled float-lg-right" id="address">
         <li><h3>Located at:</h3></li>
