--- a/contact.html
+++ b/contact.html
@@ -41,13 +41,9 @@
 
     <div class="col-12 col-lg-6 col-xl-7 float-lg-right" id="form">
       <h1>REQUEST AN APPOINTMENT</h1>
-        <p>Need to come in? Click the button below and you'll be redirected to our Heno Portal. You can use this tool to communicate with us, schedule appoinments, and make payments.</p>
+        <p>Need to come in? Click the button below and you'll be redirected to our Heno Portal. You can use this tool to communicate with us and schedule appointments.</p>
           <div class="col-11 col-md-6 col-lg-9 col-xl-7" id="appointment">
-            <a target="_blank" href="https://henoportal.com/ords/f?p=783:9999:::NO::P1_PORTAL_ID:1746VTP8K1WI">BOOK AN APPOINTMENT</a>
-          </div>
-
-          <div class="col-10 col-md-5 col-lg-7 col-xl-6" id="pay2">
-            <a target="_blank" href="https://henoportal.com/ords/f?p=783:9999:::NO::P1_PORTAL_ID:1746VTP8K1WI">PAY ONLINE HERE</a>
+            <a target="_blank" href="https://henoportal.com/ords/f?p=783:9999:::NO::P1_PORTAL_ID:1746VTP8K1WI">PATIENT REGISTRATION</a>
           </div>
 
     </div>
@@ -63,10 +59,13 @@
         <li>Fibromyalgia</li>
         <li>Orthopedics</li>
         <li>Osteoporosis</li>
+        <li>Pelvic Pain</li>
         <li><br></li>
       </ul>
       <ul class="list-unstyled col-md-6  float-md-right" id="secondlist">
-        <li>Pelvic Pain</li>
+        <li>Male Pelvic Pain (Prostatitis)</li>
+        <li>Pudendal Neuropathy</li>
+        <li>Neuralgia</li>
         <li>Urinary Incontinence</li>
         <li>Pregnancy and Post-Partum</li>
         <li>Women’s Health</li>
@@ -83,9 +82,9 @@
 <footer class="col-12">
   <img class="col-3 col-md-2 col-lg-1 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
   <a href="contact.html">Contact us</a>
-  <p class="">Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>
+  <!--<p class="">Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>-->
   <h4>Fax: 304.844.9564</h4>
-  <h4>Phone: 304.282.6497</h4>
+  <h4>Phone: 304.974.1676</h4>
 
     <ul class="list-unstyled float-lg-right" id="address">
       <li><h3>Located at:</h3></li>
