--- a/resources.html
+++ b/resources.html
@@ -264,9 +264,9 @@
 <footer class="col-12">
   <img class="col-3 col-md-2 col-lg-1 img-fluid" src="images/light_pink_icon.png" alt="logo with Pelvic Health Physical Therapy text next to it in light pink">
   <a href="contact.html">Contact us</a>
-  <p class="">Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>
+  <!--<p class="">Reach out and send us an email <a href="mailto:pelvichealthptwv@gmail.com"><span>here.</span></a></p>-->
   <h4>Fax: 304.844.9564</h4>
-  <h4>Phone: 304.282.6497</h4>
+  <h4>Phone: 304.974.1676</h4>
 
     <ul class="list-unstyled float-lg-right" id="address">
       <li><h3>Located at:</h3></li>
